Fix: Thumbnails alt text overflow (#4085)
* CSS fix

* Fix RTL CSS

* fix CSS (order)

--- a/p/themes/base-theme/template.rtl.css
+++ b/p/themes/base-theme/template.rtl.css
@@ -803,8 +803,11 @@ input[type="search"] {
 }
 
 .flux .item.thumbnail img {
+	background: repeating-linear-gradient( 45deg, #ddd, #ddd 5px, transparent 5px, transparent 10px );
+	display: inline-block;
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 	object-fit: cover;
 }
 
